src/objects/VDN_Compania__c.object
<CustomObject>
    <description>Representa cada uno de los códigos de VDN vinculados a una compañía aseguradora.</description>
    <fields>
        <fullName>VDN_FOR_CuentaIdRT__c</fullName>
        <description>Identificador del RecordType de la Cuenta a la que pertenece el VDN.</description>
        <formula>VDN_LKP_Compania__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cuenta Id RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VDN_FOR_Cuenta__c</fullName>
        <description>Identificador único de la Cuenta a la que pertenece el VDN.</description>
        <formula>VDN_LKP_Compania__r.CUE_TXT_Identificador__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VDN_LKP_Compania__c</fullName>
        <description>Compañía vinculada. Representa la FK al objeto Account para la compañía. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo  External Id: Account.CUE_TXT_Identificador__c</description>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VDN</relationshipLabel>
        <relationshipName>VDN_REL_Compania</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VDN_SEL_Idioma__c</fullName>
        <description>Idioma asociado a la VDN</description>
        <label>Idioma</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Idiomas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VDN_SEL_Mostrar_Objeto__c</fullName>
        <inlineHelpText>Objeto a abrir en caso emitir una llamada desde esta VDN</inlineHelpText>
        <label>Mostrar Objeto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VDN_TLF_Telefono__c</fullName>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VDN_TXT_Ayuda_Busqueda__c</fullName>
        <description>Ayuda al gestor para indicarle por qué datos puede realizar la búsqueda del cliente en función de la VDN</description>
        <label>Ayuda búsqueda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VDN_TXT_Identificador__c</fullName>
        <description>Campo externo y exclusivo que toma el valor del name</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VDN_TXT_Presentacion__c</fullName>
        <description>Ayuda al gestor para guiarle en la presentación que debe dar a cada cliente en función de la VDN</description>
        <label>Presentación</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>VDN</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>VDN_LKP_Compania__c</columns>
        <columns>VDN_TXT_Presentacion__c</columns>
        <columns>VDN_FOR_CuentaIdRT__c</columns>
        <columns>VDN_TXT_Identificador__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>VDNs</fullName>
        <columns>NAME</columns>
        <columns>VDN_TXT_Ayuda_Busqueda__c</columns>
        <columns>VDN_LKP_Compania__c</columns>
        <columns>VDN_FOR_Cuenta__c</columns>
        <columns>VDN_SEL_Mostrar_Objeto__c</columns>
        <columns>VDN_FOR_CuentaIdRT__c</columns>
        <columns>VDN_TXT_Identificador__c</columns>
        <columns>VDN_TXT_Presentacion__c</columns>
        <filterScope>Everything</filterScope>
        <label>VDNs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>VDN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VDN</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(VDN_TXT_Identificador__c ),VDN_TXT_Identificador__c &lt;&gt; Name), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
</CustomObject>